02 Agentic UI WITH SESSION HISTROY ADDED

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /10 LLM Projects/01 Building a Summarization project/.env
 10 LLM Projects\02 Communication with websites/.env
 .env
+/12 Openai agentic SDK/02_Chainlit_chatbot/.venv/
+/12 Openai agentic SDK/02_Chainlit_chatbot/.files/
+/12 Openai agentic SDK/02_Chainlit_chatbot/.chainlit/
