agent with streaming

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /12 Openai agentic SDK/02_Chainlit_chatbot/.venv/
 /12 Openai agentic SDK/02_Chainlit_chatbot/.files/
 /12 Openai agentic SDK/02_Chainlit_chatbot/.chainlit/
+/12 Openai agentic SDK/04_Streaming/.venv/
+/.venv/
