agent with history , streaming and tools

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /12 Openai agentic SDK/02_Chainlit_chatbot/.chainlit/
 /12 Openai agentic SDK/04_Streaming/.venv/
 /.venv/
+/12 Openai agentic SDK/05_tools/.venv/
